--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/020-disk.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/020-disk.yml
@@ -1,34 +1,35 @@
-- name: Generate directory structure available on all hosts (1/3)
+- name: Generate directory structure available on all hosts
   file:
     path: /etc/bibigrid
     state: directory
     owner: root
-    group: root
-    mode: 0755
-  task: ["common-gen-dir-structure-hosts-1"]
+    group: ubuntu
+    mode: 0775
 
-- name: Generate directory structure available on all hosts (2/3)
-  file:
+- file:
     path: /vol/
     state: directory
     owner: root
-    group: root
-    mode: 0755
-  task: ["common-gen-dir-structure-hosts-2"]
+    group: ubuntu
+    mode: 0775
 
-- name: Generate directory structure available on all hosts (3/3)
-  file:
+- file:
     path: /vol/spool/
     state: directory
     owner: root
-    group: root
+    group: ubuntu
     mode: 0777
-  task: ["common-gen-dir-structure-hosts-3"]
+
+- file:
+    path: /opt
+    state: directory
+    owner: root
+    group: ubuntu
+    mode: 0775
 
 - name: Create link in ubuntu home
   file:
     src: /vol/
     dest: /home/ubuntu/vol
     state: link
-  task: ["common-create-link-ubuntu"]
 
