--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/main.yml
@@ -1,17 +1,17 @@
 - debug:
     msg: "[BIBIGRID] Setup common software and dependencies"
 - import_tasks: 010-apt.yml
-  tags: ["common-apt"]
+  tags: ["apt","common-apt"]
 
 - debug:
     msg: "[BIBIGRID] Generate directory structure available on all hosts"
 - import_tasks: 020-disk.yml
-  tags: ["common-disk"]
+  tags: ["disk","common-disk"]
 
 - debug:
     msg: "[BIBIGRID] Setup Docker"
 - import_tasks: 030-docker.yml
-  tags: ["common docker"]
+  tags: ["docker","common-docker"]
 
 - block:
   - debug:
@@ -22,19 +22,9 @@
   - include: 041-slurm.yml
   when:
     - enable_slurm == 'yes'
-  tags: ['slurm']
-
-
-- debug:
-      msg: "[BIBIGRID] Munge"
-- include: 040-munge.yml
-  tags: ['slurm']
-- debug:
-      msg: "[BIBIGRID] SLURM Config"
-- include: 041-slurm.yml
-  tags: ['slurm']
+  tags: ['slurm',"common-slurm"]
 
 - debug:
     msg: "[BIBIGRID] Measure cluster performance"
 - import_tasks: 999-bibigridperf.yml
-  tags: ["common performance"]
+  tags: ["performance"]
