--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/021-slurm.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/021-slurm.yml
@@ -19,3 +19,19 @@
     state: restarted
   when:
     - use_master_as_compute == 'yes'
+
+# copy
+- name: Copy GridEngine compatible layer
+  copy:
+    src: slurm/qsub
+    dest: /usr/local/bin/qsub
+    mode: 0755
+    owner: root
+    group: root
+
+- copy:
+    src: slurm/gridengine-rc
+    dest: /home/ubuntu/.gridengine-rc
+    mode: 0600
+    owner: ubuntu
+    group: ubuntu
