--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/main.yml
@@ -1,12 +1,12 @@
 - debug:
     msg: "[BIBIGRID] Setup Apache and Ganglia monitor"
 - include: 001-monitor.yml
-  tags: ["master-monitor"]
+  tags: ["master-monitor","monitor"]
 
 - debug:
     msg: "[BIBIGRID] Mount disk"
 - include: 005-disk.yml
-  tags: ["master-mountdisk"]
+  tags: ["master-disk","disk"]
 
 - debug:
     msg: "[BIBIGRID] Setup NFS"
@@ -15,7 +15,7 @@
 - include: 010-nfs.yml
   when:
     - enable_nfs == 'yes'
-  tags: ["master-nfs"]
+  tags: ["master-nfs","nfs"]
 
 - debug:
     msg: "[BIBIGRID] Setup GridEngine"
@@ -24,7 +24,7 @@
 - include: 020-gridengine.yml
   when:
     - enable_gridengine == 'yes'
-  tags: ["master-gridengine"]
+  tags: ["master-gridengine","gridengine"]
 
 - block:
   - debug:
@@ -33,7 +33,7 @@
   - include: 021-slurm.yml
   when:
     - enable_slurm == 'yes'
-
+  tags: ["master-slurm","slurm"]
 
 
 - debug:
@@ -43,7 +43,7 @@
 - include: 030-mesos.yml
   when:
     - enable_mesos == 'yes'
-  tags: ["master-mesos"]
+  tags: ["master-mesos","mesos"]
 
 - debug:
     msg: "[BIBIGRID] Setup Cloud9"
@@ -52,4 +52,4 @@
 - include: 999-cloud9.yml
   when:
     - enable_cloud9 == 'yes'
-  tags: ["master-cloud9"]
+  tags: ["master-cloud9","cloud"]
