--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
@@ -12,7 +12,7 @@
 
 - name: Install common packages
   apt:
-    name: ["apt-transport-https","ca-certificates","curl","software-properties-common"]
+    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","pip"]
     state: "present"
 
 - name: Install OpenStack object store client
@@ -81,7 +81,7 @@
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
-    
+
 - name: Add Docker repository
   apt_repository:
     repo: deb https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename}} stable
