add task and options for zabbix (solving #90) rename monitor task (-> ganglia) add deprecation warning for ganglia

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/010-apt.yml
@@ -110,6 +110,12 @@
     state: present
 
 
-# - name: Update apt cache
-#   apt:
-#     update_cache: 'yes'
+- name: Update apt cache
+  apt:
+    update_cache: 'yes'
+
+
+- name: Install pip
+  apt:
+    name: pip
+    state: latest
