add zabbix task for common/master - install zabbix from official repositories - currently supports Ubuntu 16.04, Ubuntu 18.04 and Debian 9 - prepared for RHEL 7 - extend Configuration to support zabbix specifix properties

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -87,6 +87,11 @@
     repo: deb https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename}} stable
     state: present
 
+- name: Add zabbix repositories
+  apt:
+    deb: 'https://repo.zabbix.com/zabbix/4.0/{{ ansible_distribution | lower }}/pool/main/z/zabbix-release/zabbix-release_4.0-2+{{ ansible_distribution_release }}_all.deb'
+    state: present
+
 - name: Update apt cache
   apt:
     update_cache: 'yes'
