--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -12,7 +12,7 @@
 
 - name: Install common packages
   apt:
-    name: ["apt-transport-https","ca-certificates","curl","software-properties-common"]
+    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python-pip"]
     state: "present"
 
 - name: Install OpenStack object store client
@@ -81,10 +81,15 @@
   apt_key:
     url: https://download.docker.com/linux/ubuntu/gpg
     state: present
-    
+
 - name: Add Docker repository
   apt_repository:
     repo: deb https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename}} stable
+    state: present
+
+- name: Add zabbix repositories
+  apt:
+    deb: 'https://repo.zabbix.com/zabbix/4.0/{{ ansible_distribution | lower }}/pool/main/z/zabbix-release/zabbix-release_4.0-2+{{ ansible_distribution_release }}_all.deb'
     state: present
 
 - name: Update apt cache
