#105 added maxRam parameter as "memory" to instanceMap adjust slurm.conf to support hosts memory

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -6,11 +6,11 @@ SlurmUser=slurm
 
 # NODE CONFIGURATIONS
 {% if use_master_as_compute %}
-NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1
+NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
 {% endif %}
 {% set sl = [] %}
 {% for slave in slaves %}
-NodeName={{ slave.hostname }} SocketsPerBoard={{ slave.cores }} CoresPerSocket=1{{ sl.append(slave.hostname)}}
+NodeName={{ slave.hostname }} SocketsPerBoard={{ slave.cores }} CoresPerSocket=1 RealMemory={{ slave.memory }} {{ sl.append(slave.hostname)}}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
