#120 update config to support Theia IDE update commandline to support general purpose ide argument add theia task to ansible playbook

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
@@ -68,3 +68,9 @@
 
 - name: Register cloud9 service
   command: systemctl daemon-reload
+
+- name: Enable and Start service
+  systemd:
+    name: cloud9service.service
+    enabled: true
+    state: started
