#120 added map option "ide_workspace" if IDE enabled added Log info when cloud9 / theia enabled / disabled changed 999-cloud9.yml and 999-theia.yml in roles/master/tasks (has to be fixed)

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-cloud9.yml
@@ -60,7 +60,7 @@
 - name: Add default cloud9 settings file
   copy:
     content: |-
-      workingDir=~/
+      workingDir="{{ ide_workspace }}"
     dest: /etc/cloud9/settings.conf
     owner: root
     group: root
