#104 fix ogeConf Setter, added ansible playbook configuration to modify global

--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/020-gridengine.yml
@@ -144,9 +144,9 @@
 
 #qconf -Mconf ./global.conf
 
-- name: Copy global.conf
-  copy:
-    src: gridengine/global.conf
+- name: Template global.conf
+  template:
+    src: gridengine/global.conf.j2
     dest: /etc/bibigrid/gridengine/global
     mode: 0440
     owner: root
