--- a/bibigrid-light-rest-4j/pom.xml
+++ b/bibigrid-light-rest-4j/pom.xml
@@ -1,5 +1,12 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <parent>
+        <artifactId>bibigrid</artifactId>
+        <groupId>de.unibi.cebitec.bibigrid</groupId>
+        <version>2.0.5</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.unibi.cebitec.bibigrid.light_rest_4j</groupId>
     <artifactId>bibigrid_light_rest_4j</artifactId>
@@ -11,15 +18,14 @@
         <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.main.class>com.networknt.server.Server</project.main.class>
-        <version.light-4j>2.0.4</version.light-4j>
+        <version.light-4j>2.0.1</version.light-4j>
         <version.jackson>2.9.9</version.jackson>
-        <version.jackson-databind>2.9.9.3</version.jackson-databind>
         <version.slf4j>1.7.25</version.slf4j>
         <version.jose4j>0.6.3</version.jose4j>
         <version.logback>1.2.3</version.logback>
         <version.junit>4.12</version.junit>
-        <version.undertow>2.0.23.Final</version.undertow>
-        <version.json-schema-validator>1.0.19</version.json-schema-validator>
+        <version.undertow>2.0.16.Final</version.undertow>
+        <version.json-schema-validator>1.0.14</version.json-schema-validator>
         <version.fastscanner>2.18.1</version.fastscanner>
         
         
@@ -39,6 +45,7 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>com.networknt</groupId>
             <artifactId>config</artifactId>
@@ -193,7 +200,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>${version.jackson-databind}</version>
+            <version>${version.jackson}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -425,6 +432,10 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
+            <properties>
+                <java.debug.argument>-Xdebug</java.debug.argument>
+                <java.debug.agent>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</java.debug.agent>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -437,6 +448,8 @@
                             <arguments>
                                 <argument>-cp</argument>
                                 <classpath />
+                                <argument>${java.debug.argument}</argument>
+                                <argument>${java.debug.agent}</argument>
                                 <argument>${project.main.class}</argument>
                             </arguments>
                         </configuration>
