--- a/bibigrid-light-rest-4j/src/main/resources/config/audit.yml
+++ b/bibigrid-light-rest-4j/src/main/resources/config/audit.yml
@@ -4,21 +4,21 @@
 enabled: true
 
 # Enable mask
-mask: ${audit.mask:true}
+mask: true
 
 # Output response status code
-statusCode: ${audit.statusCode:true}
+statusCode: true
 
 # Output response time
-responseTime: ${audit.responseTime:true}
+responseTime: true
 
 # audit only on error responses; by default log for any return status code
 # if true, audit at error level if status code >= 400
 # log level is controlled by logLevel
-auditOnError: ${audit.auditOnError:false}
+auditOnError: false
 
 # log level; by default set to info
-logLevelIsError: ${audit.logLevelIsError:false}
+logLevelIsError: false
 
 
 # Output header elements. You can add more if you want.
@@ -42,7 +42,7 @@ audit:
 # Client Id in scope/access token, this is optional
 - scope_client_id
 
-# Request endpoint urimethod.
+# Request endpoint uri@method.
 - endpoint
 
 # Service ID assigned to the service, this is optional and must be set by the service in its implementation
@@ -53,4 +53,3 @@ audit:
 
 # Response payload, this is optional and must be set by the service in its implementation
 - response
-
