--- a/bibigrid-light-rest-4j/src/main/resources/config/metrics.yml
+++ b/bibigrid-light-rest-4j/src/main/resources/config/metrics.yml
@@ -2,19 +2,19 @@
 # Metrics handler configuration
 
 # If metrics handler is enabled or not
-enabled: ${metrics.enabled:false}
+enabled: false
 
 # influxdb protocal can be http, https
-influxdbProtocol: ${metrics.influxdbProtocol:http}
+influxdbProtocol: http
 # influxdb hostname
-influxdbHost: ${metrics.influxdbHost:localhost}
+influxdbHost: localhost
 # influxdb port number
-influxdbPort: ${metrics.influxdbPort:8086}
+influxdbPort: 8086
 # influxdb database name
-influxdbName: ${metrics.influxdbName:metrics}
+influxdbName: metrics
 # influxdb user
-influxdbUser: ${metrics.influxdbUser:admin}
+influxdbUser: admin
 # influx db password
-influxdbPass: ${metrics.influxdbPass:admin}
+influxdbPass: admin
 # report and reset metrics in minutes.
-reportInMinutes: ${metrics.reportInMinutes:1}
+reportInMinutes: 1
