--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/020-disk.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/020-disk.yml
@@ -28,6 +28,6 @@
 - name: Create link in '{{ ansible_distribution | lower }}' home
   file:
     src: /vol/
-    dest: /home/'{{ ansible_distribution | lower }}'/vol
+    dest: '/home/{{ ansible_distribution | lower }}/vol'
     state: link
 
