--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -12,7 +12,7 @@
 
 - name: Install common packages
   apt:
-    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python-pip"]
+    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python-pip",'tmux']
     state: "present"
 
 - name: Install OpenStack object store client
