--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -20,7 +20,7 @@ PartitionName=debug Nodes={% if use_master_as_compute %}{{master.hostname}},{%en
 #AccountingStorageType=accounting_storage/slurmdbd
 #AccountingStorageHost=lxcc01
 #JobAcctGatherType=jobacct_gather/linux
-#ClusterName=snowflake
+ClusterName=bibigrid
 
 # CONNECTION
 SlurmctldPort=6817
@@ -37,9 +37,20 @@ SlurmctldLogFile=/var/log/slurm-llnl/slurmctld.log
 SlurmdDebug=debug
 SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
 
+# ansible_distribution {{ ansible_distribution }}
+# ansible_distribution_release {{ ansible_distribution_release }}
+# ansible_distribution_version {{ ansible_distribution_version }}
+
 # STATE INFO
+{% if ansible_distribution == 'Debian' and ansible_distribution_version == '10' %}
+SlurmctldPidFile=/run/slurmctld.pid
+SlurmdPidFile=/run/slurmd.pid
+{% endif %}
+
+{% if ansible_distribution == 'Ubuntu' or ( ansible_distribution == 'Debian' and ansible_distribution_version != '10' ) %}
 SlurmctldPidFile=/var/run/slurm-llnl/slurmctld.pid
 SlurmdPidFile=/var/run/slurm-llnl/slurmd.pid
+{% endif %}
 
 # SCHEDULING
 FastSchedule=2
