--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -20,7 +20,10 @@ PartitionName=debug Nodes={% if use_master_as_compute %}{{master.hostname}},{%en
 #AccountingStorageType=accounting_storage/slurmdbd
 #AccountingStorageHost=lxcc01
 #JobAcctGatherType=jobacct_gather/linux
+{% if ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' %}
+# Debian 10 "buster" slurm package needs clustername to be set
 ClusterName=bibigrid
+{% endif %}
 
 # CONNECTION
 SlurmctldPort=6817
@@ -42,12 +45,12 @@ SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
 # ansible_distribution_version {{ ansible_distribution_version }}
 
 # STATE INFO
-{% if ansible_distribution == 'Debian' and ansible_distribution_version == '10' %}
+{% if ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' %}
 SlurmctldPidFile=/run/slurmctld.pid
 SlurmdPidFile=/run/slurmd.pid
 {% endif %}
 
-{% if ansible_distribution == 'Ubuntu' or ( ansible_distribution == 'Debian' and ansible_distribution_version != '10' ) %}
+{% if ansible_distribution == 'Ubuntu' or ( ansible_distribution == 'Debian' and ansible_distribution_release == 'stretch' ) %}
 SlurmctldPidFile=/var/run/slurm-llnl/slurmctld.pid
 SlurmdPidFile=/var/run/slurm-llnl/slurmd.pid
 {% endif %}
