--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -12,7 +12,7 @@
 
 - name: Install common packages
   apt:
-    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python-pip"]
+    name: ["apt-transport-https","ca-certificates","curl","software-properties-common","python-pip",'tmux']
     state: "present"
 
 - name: Install OpenStack object store client
@@ -79,12 +79,12 @@
 
 - name: Add Docker repository key
   apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
+    url: 'https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg'
     state: present
 
 - name: Add Docker repository
   apt_repository:
-    repo: deb https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename}} stable
+    repo: 'deb https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_lsb.codename}} stable'
     state: present
 
 - name: Add zabbix repositories
