fix #155 : replace 'slave' in any occurrance with 'worker'

--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -9,8 +9,8 @@ SlurmUser=slurm
 NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
 {% endif %}
 {% set sl = [] %}
-{% for slave in slaves %}
-NodeName={{ slave.hostname }} SocketsPerBoard={{ slave.cores }} CoresPerSocket=1 RealMemory={{ slave.memory }} {{ sl.append(slave.hostname)}}
+{% for worker in workers %}
+NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
