fix #154 : improve error handling - partly rewrite/restructure CreateCluster

--- a/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/tasks/001-apt.yml
@@ -1,3 +1,8 @@
+- name: Debian based system
+  debug:
+    msg : Using apt to install packages
+
+
 - name: Deactivate auto-update function
   shell: |
         systemctl stop apt-daily.service
