--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -5,16 +5,14 @@ CryptoType=crypto/munge
 SlurmUser=slurm
 
 # NODE CONFIGURATIONS
-{% if use_master_as_compute %}
 NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
-{% endif %}
 {% set sl = [] %}
 {% for worker in workers %}
 NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
-PartitionName=debug Nodes={% if use_master_as_compute %}{{master.hostname}},{%endif%}{{sl|join(",")}} default=YES
+PartitionName=debug Nodes={% if use_master_as_compute == 'yes' %}{{master.hostname}},{%endif%}{{sl|join(",")}} default=YES
 
 # ACCOUNTING
 #AccountingStorageType=accounting_storage/slurmdbd
