--- a/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
+++ b/bibigrid-core/src/main/resources/playbook/roles/common/templates/slurm/slurm.conf
@@ -5,22 +5,23 @@ CryptoType=crypto/munge
 SlurmUser=slurm
 
 # NODE CONFIGURATIONS
-{% if use_master_as_compute %}
 NodeName={{ master.hostname }} SocketsPerBoard={{ master.cores }} CoresPerSocket=1 RealMemory={{ master.memory }}
-{% endif %}
 {% set sl = [] %}
-{% for slave in slaves %}
-NodeName={{ slave.hostname }} SocketsPerBoard={{ slave.cores }} CoresPerSocket=1 RealMemory={{ slave.memory }} {{ sl.append(slave.hostname)}}
+{% for worker in workers %}
+NodeName={{ worker.hostname }} SocketsPerBoard={{ worker.cores }} CoresPerSocket=1 RealMemory={{ worker.memory }} {{ sl.append(worker.hostname)}}
 {% endfor %}
 
 # PARTITION CONFIGURATIONS
-PartitionName=debug Nodes={% if use_master_as_compute %}{{master.hostname}},{%endif%}{{sl|join(",")}} default=YES
+PartitionName=debug Nodes={% if use_master_as_compute == 'yes' %}{{master.hostname}},{%endif%}{{sl|join(",")}} default=YES
 
 # ACCOUNTING
 #AccountingStorageType=accounting_storage/slurmdbd
 #AccountingStorageHost=lxcc01
 #JobAcctGatherType=jobacct_gather/linux
-#ClusterName=snowflake
+{% if ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' %}
+# Debian 10 "buster" slurm package needs clustername to be set
+ClusterName=bibigrid
+{% endif %}
 
 # CONNECTION
 SlurmctldPort=6817
@@ -37,12 +38,23 @@ SlurmctldLogFile=/var/log/slurm-llnl/slurmctld.log
 SlurmdDebug=debug
 SlurmdLogFile=/var/log/slurm-llnl/slurmd.log
 
+# ansible_distribution {{ ansible_distribution }}
+# ansible_distribution_release {{ ansible_distribution_release }}
+# ansible_distribution_version {{ ansible_distribution_version }}
+
 # STATE INFO
+{% if ansible_distribution == 'Debian' and ansible_distribution_release == 'buster' %}
+SlurmctldPidFile=/run/slurmctld.pid
+SlurmdPidFile=/run/slurmd.pid
+{% endif %}
+
+{% if ansible_distribution == 'Ubuntu' or ( ansible_distribution == 'Debian' and ansible_distribution_release == 'stretch' ) %}
 SlurmctldPidFile=/var/run/slurm-llnl/slurmctld.pid
 SlurmdPidFile=/var/run/slurm-llnl/slurmd.pid
+{% endif %}
 
 # SCHEDULING
 FastSchedule=2
 
 # ERROR RECOVERY
-ReturnToService=1
+ReturnToService=2
