--- a/bibigrid-light-rest-4j/pom.xml
+++ b/bibigrid-light-rest-4j/pom.xml
@@ -237,6 +237,18 @@
             <version>2.0.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
+            <artifactId>bibigrid-core</artifactId>
+            <version>2.0.9</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
+            <artifactId>bibigrid-openstack</artifactId>
+            <version>2.0.9</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
