Fixed schönheitsfehler inside API-specification and regenerated the whole project. Wrote basic tests for all handlers.

--- a/bibigrid-light-rest-4j/src/main/resources/config/handler.yml
+++ b/bibigrid-light-rest-4j/src/main/resources/config/handler.yml
@@ -101,7 +101,7 @@ paths:
       - default
       - de.unibi.cebitec.bibigrid.light_rest_4j.handler.BibigridTerminateIdDeleteHandler
 
-  - path: 'server/health'
+  - path: '/server/health'
     method: 'get'
     exec:
       - health
