--- a/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-theia.yml
+++ b/bibigrid-core/src/main/resources/playbook/roles/master/tasks/999-theia.yml
@@ -1,11 +1,11 @@
 - name: Install packages
   apt:
-    name: ["python3", "make", "g++", "curl", "git"]
+    name: ["python", "make", "g++", "curl", "git"]
   when: ansible_distribution_file_variety == 'Debian'
 
 - name: install packages
   yum:
-    name: ["python3", "curl", "git", "make", "gcc", "gcc-c++"]
+    name: ["python", "curl", "git", "make", "gcc", "gcc-c++"]
   when: ansible_distribution_file_variety == 'RedHat'
 
 - name: Create NVM install dir
@@ -21,7 +21,7 @@
 
 - name: Set fact 'ide_workspace' when not defined
   set_fact:
-    theia_ide_workspace: "{{ ansible_env.PWD }}"
+    theia_ide_workspace: "{{ ansible_env.HOME }}"
   when: ide_workspace is not defined
 
 - name: Set fact 'ide_workspace' when defined
